# bolef_bekkcap

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
farm/: admin.py  apps.py  auth_views.py  email_otp_views.py  models.py  serializers.py  urls.py  views.py
farm/migrations/: 0001_initial.py  0002_userprofile.py
templates/: google_callback.html
